--- a/src/components/global/Header.astro
+++ b/src/components/global/Header.astro
@@ -53,8 +53,13 @@ const currentPage = Astro.url.pathname; // Get the current page's pathname
         <a href="/work" class="!no-underline hover:text-gray-400">Work</a>
       </li>
       <li>
-        <a href="/lab" class="!no-underline hover:text-gray-400">Laboratory</a>
+        <a href="/teaching" class="!no-underline hover:text-gray-400"
+          >Teaching</a
+        >
       </li>
+      <!-- <li>
+        <a href="/lab" class="!no-underline hover:text-gray-400">Laboratory</a>
+      </li> -->
 
       <!-- Close button label -->
       <label
