--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -52,6 +52,9 @@ import PDFResumeText from "@/components/PDFResumeText.astro";
             <FullListCard title="Workshop" />
           </div>
           <div class="swiper-slide">
+            <FullListCard title="Exhibition" />
+          </div>
+          <div class="swiper-slide">
             <FullListCard title="Featured" />
           </div>
           <div class="swiper-slide">
