--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -6,7 +6,7 @@ import { render } from "astro:content";
 export async function getStaticPaths() {
   const posts = await getCollection("work");
   return posts
-    .filter((post) => post.data.archived === false)
+    .filter((post) => post.data.archived === false && !post.data.elink)
     .map((post) => ({
       params: { slug: post.id },
       props: post,
